Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6182950/T6182950b.out
T6182950b.java:15:16: compiler.err.name.clash.same.erasure.no.override: m, java.util.List<java.lang.Integer>, T6182950b.B, m, java.util.List<java.lang.String>, T6182950b.A
1 error
